# pingbong

./: README.md
.github/workflows/: rust.yml
client/: .env  .gitignore  icomoon.json  package-lock.json  package.json  post-build.sh  preact.config.js  tailwind.config.js
client/src/: achievement.js  ball.js  bot.js  config.js  firework.js  index.css  index.js  manifest.json  network.js  player.js  playstate.js  powerup.js  sound.js  stringcleaner.js  template.html  util.js
client/src/_routes/: lobby.js  privacypolicy.js  room.js
client/src/components/: achievement.js  achievementpage.js  app.js  blackoverlay.js  button.js  changelog.js  credits.js  error.js  howtoplay.js  icon.js  loading.js  modal.js  switch.js  trailer.js
client/src/input/: gamepad.js  input.js  mouse.js  touch.js
client/src/post-processing/: effect.js  filtertracker.js  identity-vert.glsl  shader.js  split-fragment.glsl
server/: Cargo.toml  compile_release
server/src/: ball.rs  bincode.rs  bot.rs  circular_buffer.rs  main.rs  player.rs  player_container.rs  powerup.rs  protocol.rs  room.rs  room_manager.rs  shared_room_data.rs  team_data.rs  tracker.rs  util.rs  vector.rs
