[package]
name = "server"
version = "0.1.0"
authors = ["nielsdos <7771979+nielsdos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "^1.3"
bytes = "1"
lazy_static = "1.4.0"
tokio = { version = "1.0.0", features = ["macros", "time", "rt-multi-thread"] }
tokio-tungstenite = { git = "https://github.com/nielsdos/tokio-tungstenite.git" }
futures = "^0.3.8"
smallvec = { version = "1.6.1", features = ["serde"] }
atomic = "0.5"
static_assertions = "1.1.0"
rand = { version = "0.8.3", features = ["small_rng"] }
chrono = "0.4"
fnv = "1.0.7"
core_simd = { git = "https://github.com/rust-lang/stdsimd.git", package = "core_simd" }

[profile.dev]
opt-level = 1

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
